src/components/Episode.module.css
.mobileTrigger {
  display: none;
}

@media (max-width: 500px) {
  .mobileTrigger {
    display: unset;
  }
}

@media (max-width: 500px) {
  .desktopTrigger {
    display: none;
  }
}

.trigger {
  background: transparent;
  z-index: 1;
  height: 80%;
  aspect-ratio: 1;
  justify-self: center;
  align-self: center;
  border-radius: 50%;
  border: 1px solid #b12d4e;
}

.trigger:hover {
  border: 1px solid var(--color-text);
}

.TooltipContent {
  border-radius: 4px;
  padding: 10px 15px;
  line-height: 1;
  color: var(--color-background);
  background-color: white;
  z-index: 2;
  box-shadow:
    hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
  user-select: none;
  animation-duration: 400ms;
  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
  will-change: transform, opacity;
}

.content > p,
.content > h2 {
  margin: 0;
  margin-bottom: 0.5em;
}

.content > h2 {
  font-size: 0.6rem;
}

.content > p {
  margin-top: 0.2rem;
  font-size: 0.4rem;
}

.TooltipContent[data-state="delayed-open"][data-side="top"] {
  animation-name: slideDownAndFade;
}
.TooltipContent[data-state="delayed-open"][data-side="right"] {
  animation-name: slideLeftAndFade;
}
.TooltipContent[data-state="delayed-open"][data-side="bottom"] {
  animation-name: slideUpAndFade;
}
.TooltipContent[data-state="delayed-open"][data-side="left"] {
  animation-name: slideRightAndFade;
}

.TooltipArrow {
  fill: white;
}

@keyframes slideUpAndFade {
  from {
    opacity: 0;
    transform: translateY(2px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideRightAndFade {
  from {
    opacity: 0;
    transform: translateX(-2px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideDownAndFade {
  from {
    opacity: 0;
    transform: translateY(-2px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideLeftAndFade {
  from {
    opacity: 0;
    transform: translateX(2px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

